hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__stack_array__test__emit_all_ops@llvm20.snap
---
source: hugr-llvm/src/extension/collections/stack_array.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [37 x i8] c"Expected variant 1 but got variant 0\00", align 1
@prelude.panic_template = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1
@1 = private unnamed_addr constant [37 x i8] c"Expected variant 1 but got variant 0\00", align 1
@prelude.panic_template.1 = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1
@2 = private unnamed_addr constant [37 x i8] c"Expected variant 1 but got variant 0\00", align 1
@prelude.panic_template.2 = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1
@3 = private unnamed_addr constant [37 x i8] c"Expected variant 1 but got variant 0\00", align 1
@prelude.panic_template.3 = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1
@4 = private unnamed_addr constant [37 x i8] c"Expected variant 1 but got variant 0\00", align 1
@prelude.panic_template.4 = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1

define private void @_hl.main.1() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %0 = insertvalue [2 x i64] undef, i64 1, 0
  %1 = insertvalue [2 x i64] %0, i64 2, 1
  %2 = insertvalue [2 x i64] undef, i64 1, 0
  %3 = insertvalue [2 x i64] %2, i64 2, 1
  %extract = extractvalue [2 x i64] %3, 0
  %extract6 = extractvalue [2 x i64] %3, 1
  %4 = icmp ult i64 0, 2
  %5 = icmp ult i64 1, 2
  %6 = and i1 %4, %5
  br i1 %6, label %9, label %7

7:                                                ; preds = %entry_block
  %8 = insertvalue { i1, [2 x i64] } { i1 false, [2 x i64] poison }, [2 x i64] %1, 1
  br label %17

9:                                                ; preds = %entry_block
  %10 = alloca i64, i32 2, align 8
  store [2 x i64] %1, ptr %10, align 4
  %11 = getelementptr inbounds i64, ptr %10, i64 0
  %12 = load i64, ptr %11, align 4
  %13 = getelementptr inbounds i64, ptr %10, i64 1
  %14 = load i64, ptr %13, align 4
  store i64 %14, ptr %11, align 4
  store i64 %12, ptr %13, align 4
  %15 = load [2 x i64], ptr %10, align 4
  %16 = insertvalue { i1, [2 x i64] } { i1 true, [2 x i64] poison }, [2 x i64] %15, 1
  br label %17

17:                                               ; preds = %7, %9
  %"0.0" = phi { i1, [2 x i64] } [ %16, %9 ], [ %8, %7 ]
  %18 = extractvalue { i1, [2 x i64] } %"0.0", 0
  switch i1 %18, label %19 [
    i1 true, label %21
  ]

19:                                               ; preds = %17
  %20 = extractvalue { i1, [2 x i64] } %"0.0", 1
  br label %cond_19_case_0

21:                                               ; preds = %17
  %22 = extractvalue { i1, [2 x i64] } %"0.0", 1
  br label %cond_19_case_1

cond_19_case_0:                                   ; preds = %19
  %23 = extractvalue { i32, ptr } { i32 1, ptr @0 }, 0
  %24 = extractvalue { i32, ptr } { i32 1, ptr @0 }, 1
  %25 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template, i32 %23, ptr %24)
  call void @abort()
  br label %cond_exit_19

cond_19_case_1:                                   ; preds = %21
  br label %cond_exit_19

cond_exit_19:                                     ; preds = %cond_19_case_1, %cond_19_case_0
  %"012.0" = phi [2 x i64] [ zeroinitializer, %cond_19_case_0 ], [ %22, %cond_19_case_1 ]
  %26 = icmp ult i64 0, 2
  br i1 %26, label %28, label %27

27:                                               ; preds = %cond_exit_19
  br label %33

28:                                               ; preds = %cond_exit_19
  %29 = alloca i64, i32 2, align 8
  store [2 x i64] %"012.0", ptr %29, align 4
  %30 = getelementptr inbounds i64, ptr %29, i64 0
  %31 = load i64, ptr %30, align 4
  %32 = insertvalue { i1, i64 } { i1 true, i64 poison }, i64 %31, 1
  br label %33

33:                                               ; preds = %27, %28
  %"024.0" = phi { i1, i64 } [ %32, %28 ], [ { i1 false, i64 poison }, %27 ]
  %34 = extractvalue { i1, i64 } %"024.0", 0
  switch i1 %34, label %35 [
    i1 true, label %36
  ]

35:                                               ; preds = %33
  br label %cond_31_case_0

36:                                               ; preds = %33
  %37 = extractvalue { i1, i64 } %"024.0", 1
  br label %cond_31_case_1

cond_31_case_0:                                   ; preds = %35
  %38 = extractvalue { i32, ptr } { i32 1, ptr @1 }, 0
  %39 = extractvalue { i32, ptr } { i32 1, ptr @1 }, 1
  %40 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template.1, i32 %38, ptr %39)
  call void @abort()
  br label %cond_exit_31

cond_31_case_1:                                   ; preds = %36
  br label %cond_exit_31

cond_exit_31:                                     ; preds = %cond_31_case_1, %cond_31_case_0
  %"028.0" = phi i64 [ 0, %cond_31_case_0 ], [ %37, %cond_31_case_1 ]
  %41 = icmp ult i64 1, 2
  br i1 %41, label %45, label %42

42:                                               ; preds = %cond_exit_31
  %43 = insertvalue { i1, i64, [2 x i64] } { i1 false, i64 poison, [2 x i64] poison }, i64 %"028.0", 1
  %44 = insertvalue { i1, i64, [2 x i64] } %43, [2 x i64] %"012.0", 2
  br label %52

45:                                               ; preds = %cond_exit_31
  %46 = alloca i64, i32 2, align 8
  store [2 x i64] %"012.0", ptr %46, align 4
  %47 = getelementptr inbounds i64, ptr %46, i64 1
  %48 = load i64, ptr %47, align 4
  store i64 %"028.0", ptr %47, align 4
  %49 = load [2 x i64], ptr %46, align 4
  %50 = insertvalue { i1, i64, [2 x i64] } { i1 true, i64 poison, [2 x i64] poison }, i64 %48, 1
  %51 = insertvalue { i1, i64, [2 x i64] } %50, [2 x i64] %49, 2
  br label %52

52:                                               ; preds = %42, %45
  %"038.0" = phi { i1, i64, [2 x i64] } [ %51, %45 ], [ %44, %42 ]
  %53 = extractvalue { i1, i64, [2 x i64] } %"038.0", 0
  switch i1 %53, label %54 [
    i1 true, label %57
  ]

54:                                               ; preds = %52
  %55 = extractvalue { i1, i64, [2 x i64] } %"038.0", 1
  %56 = extractvalue { i1, i64, [2 x i64] } %"038.0", 2
  br label %cond_42_case_0

57:                                               ; preds = %52
  %58 = extractvalue { i1, i64, [2 x i64] } %"038.0", 1
  %59 = extractvalue { i1, i64, [2 x i64] } %"038.0", 2
  br label %cond_42_case_1

cond_42_case_0:                                   ; preds = %54
  %60 = extractvalue { i32, ptr } { i32 1, ptr @2 }, 0
  %61 = extractvalue { i32, ptr } { i32 1, ptr @2 }, 1
  %62 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template.2, i32 %60, ptr %61)
  call void @abort()
  br label %cond_exit_42

cond_42_case_1:                                   ; preds = %57
  br label %cond_exit_42

cond_exit_42:                                     ; preds = %cond_42_case_1, %cond_42_case_0
  %"041.0" = phi i64 [ 0, %cond_42_case_0 ], [ %58, %cond_42_case_1 ]
  %"142.0" = phi [2 x i64] [ zeroinitializer, %cond_42_case_0 ], [ %59, %cond_42_case_1 ]
  %63 = alloca i64, i32 2, align 8
  store [2 x i64] %"142.0", ptr %63, align 4
  %64 = getelementptr i64, ptr %63, i32 1
  %65 = load i64, ptr %63, align 4
  %66 = load [1 x i64], ptr %64, align 4
  %67 = insertvalue { i1, i64, [1 x i64] } { i1 true, i64 poison, [1 x i64] poison }, i64 %65, 1
  %68 = insertvalue { i1, i64, [1 x i64] } %67, [1 x i64] %66, 2
  %69 = extractvalue { i1, i64, [1 x i64] } %68, 0
  switch i1 %69, label %70 [
    i1 true, label %71
  ]

70:                                               ; preds = %cond_exit_42
  br label %cond_53_case_0

71:                                               ; preds = %cond_exit_42
  %72 = extractvalue { i1, i64, [1 x i64] } %68, 1
  %73 = extractvalue { i1, i64, [1 x i64] } %68, 2
  br label %cond_53_case_1

cond_53_case_0:                                   ; preds = %70
  %74 = extractvalue { i32, ptr } { i32 1, ptr @3 }, 0
  %75 = extractvalue { i32, ptr } { i32 1, ptr @3 }, 1
  %76 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template.3, i32 %74, ptr %75)
  call void @abort()
  br label %cond_exit_53

cond_53_case_1:                                   ; preds = %71
  br label %cond_exit_53

cond_exit_53:                                     ; preds = %cond_53_case_1, %cond_53_case_0
  %"062.0" = phi i64 [ 0, %cond_53_case_0 ], [ %72, %cond_53_case_1 ]
  %"163.0" = phi [1 x i64] [ zeroinitializer, %cond_53_case_0 ], [ %73, %cond_53_case_1 ]
  %77 = alloca i64, align 8
  store [1 x i64] %"163.0", ptr %77, align 4
  %78 = getelementptr i64, ptr %77, i32 0
  %79 = load i64, ptr %78, align 4
  %80 = load [0 x i64], ptr %77, align 4
  %81 = insertvalue { i1, i64 } { i1 true, i64 poison }, i64 %79, 1
  %82 = extractvalue { i1, i64 } %81, 0
  switch i1 %82, label %83 [
    i1 true, label %84
  ]

83:                                               ; preds = %cond_exit_53
  br label %cond_64_case_0

84:                                               ; preds = %cond_exit_53
  %85 = extractvalue { i1, i64 } %81, 1
  br label %cond_64_case_1

cond_64_case_0:                                   ; preds = %83
  %86 = extractvalue { i32, ptr } { i32 1, ptr @4 }, 0
  %87 = extractvalue { i32, ptr } { i32 1, ptr @4 }, 1
  %88 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template.4, i32 %86, ptr %87)
  call void @abort()
  br label %cond_exit_64

cond_64_case_1:                                   ; preds = %84
  br label %cond_exit_64

cond_exit_64:                                     ; preds = %cond_64_case_1, %cond_64_case_0
  %"077.0" = phi i64 [ 0, %cond_64_case_0 ], [ %85, %cond_64_case_1 ]
  %"178.0" = phi [0 x i64] [ zeroinitializer, %cond_64_case_0 ], [ undef, %cond_64_case_1 ]
  ret void
}

declare i32 @printf(ptr, ...)

declare void @abort()
