hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__stack_array__test__emit_array_value@llvm14.snap
---
source: hugr-llvm/src/extension/collections/stack_array.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define [2 x i64] @_hl.main.1() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  ret [2 x i64] [i64 1, i64 2]
}
