hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__stack_array__test__emit_get@pre-mem2reg@llvm20.snap
---
source: hugr-llvm/src/extension/collections/stack_array.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private void @_hl.main.1() {
alloca_block:
  %"7_0" = alloca i64, align 8
  %"5_0" = alloca i64, align 8
  %"8_0" = alloca [2 x i64], align 8
  %"9_0" = alloca { i1, i64 }, align 8
  %"9_1" = alloca [2 x i64], align 8
  %"0" = alloca { i1, i64 }, align 8
  %"1" = alloca [2 x i64], align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 2, ptr %"7_0", align 4
  store i64 1, ptr %"5_0", align 4
  %"5_01" = load i64, ptr %"5_0", align 4
  %"7_02" = load i64, ptr %"7_0", align 4
  %0 = insertvalue [2 x i64] undef, i64 %"5_01", 0
  %1 = insertvalue [2 x i64] %0, i64 %"7_02", 1
  store [2 x i64] %1, ptr %"8_0", align 4
  %"8_03" = load [2 x i64], ptr %"8_0", align 4
  %"5_04" = load i64, ptr %"5_0", align 4
  %2 = icmp ult i64 %"5_04", 2
  br i1 %2, label %4, label %3

3:                                                ; preds = %entry_block
  store { i1, i64 } { i1 false, i64 poison }, ptr %"0", align 4
  store [2 x i64] %"8_03", ptr %"1", align 4
  br label %9

4:                                                ; preds = %entry_block
  %5 = alloca i64, i32 2, align 8
  store [2 x i64] %"8_03", ptr %5, align 4
  %6 = getelementptr inbounds i64, ptr %5, i64 %"5_04"
  %7 = load i64, ptr %6, align 4
  %8 = insertvalue { i1, i64 } { i1 true, i64 poison }, i64 %7, 1
  store { i1, i64 } %8, ptr %"0", align 4
  store [2 x i64] %"8_03", ptr %"1", align 4
  br label %9

9:                                                ; preds = %3, %4
  %"05" = load { i1, i64 }, ptr %"0", align 4
  %"16" = load [2 x i64], ptr %"1", align 4
  store { i1, i64 } %"05", ptr %"9_0", align 4
  store [2 x i64] %"16", ptr %"9_1", align 4
  %"9_17" = load [2 x i64], ptr %"9_1", align 4
  ret void
}
