hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__stack_array__test__emit_unpack@llvm14.snap
---
source: hugr-llvm/src/extension/collections/stack_array.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i64, i64 } @_hl.main.1() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %extract = extractvalue [2 x i64] [i64 1, i64 2], 0
  %extract2 = extractvalue [2 x i64] [i64 1, i64 2], 1
  %mrv = insertvalue { i64, i64 } undef, i64 %extract, 0
  %mrv7 = insertvalue { i64, i64 } %mrv, i64 %extract2, 1
  ret { i64, i64 } %mrv7
}
